--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
         <div class="foote_inner">
             <p class="f_ul">Head office <br>
                 Address : 부산시 바다구 <br>
-                TEL : 1666-7888｜ FAX : 01-957-9888<br>
-                E-mail : nmghty99@naver.com E-mail : storyfc@storyfc.com<br>
+                TEL : 1888-9888｜ FAX : 051-888-9888<br>
+                E-mail : nmghty99@naver.com <br>
                 ※ 근무시간 안내 <br>
                 평일 09:00-18:00 (점심시간 12:00-13:00) ｜토, 일, 공휴일 휴무</p>
             <div class="img">
                 <img src="images/footer_logo1.png" alt="footer_logo">
             </div>
             <div class="right">
-                <p>가맹문의 1359-8777</p> <br>
+                <p>가맹문의 1888-8888</p> <br>
                  <ul class="f_u2"> 
                 <li><a href="#">Naver</a></li>
                 <li><a href="#">Instagram</a></li>
